solve vms and k8s
